# GoogleCloudPlatform-_-go-storage-fio-engine-demo

./: BUILD.bazel  LICENSE  MODULE.bazel  README.md  go-storage-fio-engine.c  renovate.json  run_fio.sh
.github/: golangci.yml
.github/workflows/: ci.yml  license.yml  lint.yml  scorecard.yml
storagewrapper/: BUILD.bazel  go.mod  go.sum  storagewrapper.go
