load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_shared_library.bzl", "cc_shared_library")

cc_library(
    name = "ioengine",
    srcs = [
        "go-storage-fio-engine.c",
        "//storagewrapper",
    ],
    defines = ["_GNU_SOURCE"],
    deps = [
        "//storagewrapper",
        "@fio_repo//:hdr_lib",
    ],
)

cc_shared_library(
    name = "ioengine_shared",
    shared_lib_name = "libgo-storage-fio-engine.so",
    deps = [":ioengine"],
)
