bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Fetch fio such that we can use its headers.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "fio_repo",
    build_file = "//:BUILD.fio.bazel",
    patch_args = ["-p1"],
    patches = ["//:fio.install-headers.patch"],
    sha256 = "73b3ca18a66fb88a90dae73b9994fdd18d35161d914ffe2089380760af5533cf",
    strip_prefix = "fio-fio-3.38",
    url = "https://github.com/axboe/fio/archive/refs/tags/fio-3.38.tar.gz",
)

# Use the Go version indicated in go.mod
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//storagewrapper:go.mod")

# Depend on the Go Storage SDK
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//storagewrapper:go.mod")
use_repo(go_deps, "com_google_cloud_go_storage", "org_golang_google_api")
