bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_go", version = "0.60.0")

# Use local make toolchain instead of building it from scratch.
register_toolchains("@rules_foreign_cc//toolchains:preinstalled_make_toolchain")
# We don't use pkgconfig, so use the local one instead of building it from
# scratch.
register_toolchains("@rules_foreign_cc//toolchains:preinstalled_pkgconfig_toolchain")

# Fetch fio such that we can use its headers.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "fio_repo",
    build_file = "//:BUILD.fio.bazel",
    patch_args = ["-p1"],
    patches = ["//:fio.install-headers.patch"],
    sha256 = "38f2c723eda1d94fd25c91dbad30da7a551a58840b7a6368eaee3daa700fb088",
    strip_prefix = "fio-fio-3.41",
    url = "https://github.com/axboe/fio/archive/refs/tags/fio-3.41.tar.gz",
)

# Use the Go version indicated in go.mod
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//storagewrapper:go.mod")

# Depend on the Go Storage SDK
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//storagewrapper:go.mod")
use_repo(go_deps, "com_google_cloud_go_storage", "org_golang_google_api")
